--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,18 @@
 				<p id="typing"></p>
 			</div>
 
-			<form action="">
-				<input id="message" type="text" name="" autocomplete="off" placeholder="Enter text, press enter to submit">
-			</form>
+			<div id="inputs">
+				<form>
+					<input type="file" id="upload_input"/>
+					<label for="upload_input">
+						<i class="fas fa-paperclip fa-2x"></i>
+					</label>
+				</form>
+
+				<form action="" id="message-section">
+					<input id="message" type="text" name="" autocomplete="off" autocorrect="off" spellcheck="false" placeholder="Enter text, press enter to submit">
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
