--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,12 @@
 <% include ./partials/header %>
 
 <div id="main">
+	<!-- MODAL -->
+	<div class="modal">
+		<div class="content">
+		</div>
+	</div>
+
 	<div id="people">
 	</div>
 
