--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -19,14 +19,14 @@
 			</div>
 
 			<div id="inputs">
-				<form>
+				<form class="color">
 					<input type="file" id="upload_input"/>
 					<label for="upload_input">
 						<i class="fas fa-paperclip fa-2x"></i>
 					</label>
 				</form>
 
-				<form action="" id="message-section">
+				<form action="" class="color" id="message-section">
 					<input id="message" type="text" name="" autocomplete="off" autocorrect="off" spellcheck="false" placeholder="Enter text, press enter to submit">
 				</form>
 			</div>
