--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -8,6 +8,10 @@
 	</div>
 
 	<div id="people">
+		<a href="/logout" id="logout">
+			<i class="fas fa-sign-out-alt"></i>
+			<p>Log out</p>
+		</a>
 	</div>
 
 	<div id="chat">
