--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,10 @@
 <h2>Log in</h2>
 
 <div class="outer">
-	<form class="inner" action="/" method="POST">
+	<form id="login" class="inner" action="/" method="POST">
 		<input class="inputs" type="text" name="username" placeholder="Username">
 		<input class="inputs" type="password" name="password" placeholder="Password">
-		<button>Submit</button>
+		<button id="login-button">Submit</button>
 	</form>
 
 	<span>Don't have an account? <a href="/register">Sign Up!</a></span>
