--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,16 @@ h2{
 	margin: auto;
 }
 
+.fa-sign-out-alt{
+	float: left;
+	padding-right: 5px;
+}
+
+a:link{
+	text-decoration: none;
+	color: black;
+}
+
 .img-modal-size{
 	vertical-align: middle;	
 	max-width: 1400px;
@@ -114,6 +124,16 @@ h2{
 	word-wrap: break-word;
 }
 
+.speech-bubble-right-stack{
+	width: fit-content;
+	background: #ffd2d1;
+	border-radius: 1.2em;
+	padding: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	word-wrap: break-word;
+}
+
 .speech-bubble-right:after {
 	content: '';
 	position: absolute;
@@ -130,6 +150,16 @@ h2{
 }
 
 .speech-bubble-left {
+	width: fit-content;
+	background: #e4cbd1;
+	border-radius: 1.2em;
+	padding: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	word-wrap: break-word;
+}
+
+.speech-bubble-left-stack{
 	width: fit-content;
 	background: #e4cbd1;
 	border-radius: 1.2em;
@@ -170,9 +200,7 @@ h2{
 
 .name-left{
 	display: block;
-	margin-top: -5px;
-	margin-left: 100px;
-	margin-bottom: -10px;
+	margin-left: 95px;
 }
 
 .right-display{
@@ -181,8 +209,20 @@ h2{
 	max-height: 400px;
 	max-width: 400px;
 	position: relative;
-	margin: 10px;
+	margin-top: 15px;
+	margin-bottom: 5px;
 	margin-right: 25px;
+}
+
+.right-display-stack{
+	display: block;
+	float: right;
+	clear: both;
+	max-height: 400px;
+	max-width: 400px;
+	position: relative;
+	margin: 5px;
+	margin-right: 87px;
 }
 
 .left-display{
@@ -190,8 +230,17 @@ h2{
 	max-height: 400px;
 	max-width: 400px;
 	position: relative;
-	margin: 10px;
+	margin-bottom: 5px;
 	margin-left: 25px;
+}
+
+.left-display-stack{
+	display: block;
+	max-height: 400px;
+	max-width: 400px;
+	position: relative;
+	margin: 5px;
+	margin-left: 87px;
 }
 
 .inputs{
